[gd_scene load_steps=10 format=3 uid="uid://1bj38fktu8r6"]

[ext_resource type="Script" path="res://game_scenes/Camp/camp_scene.gd" id="1_5txfa"]

[sub_resource type="LabelSettings" id="LabelSettings_x171v"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_2tmd6"]
font_size = 22

[sub_resource type="Animation" id="Animation_ydali"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CampUI/Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CampUI/Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1yijl"]
resource_name = "fadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CampUI/Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CampUI/Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CampUI:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fhb1c"]
_data = {
"RESET": SubResource("Animation_ydali"),
"fadeIn": SubResource("Animation_1yijl")
}

[sub_resource type="Animation" id="Animation_65a1b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../SleepAnimation/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_isok7"]
resource_name = "SleepAnimation"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../SleepAnimation/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../SleepAnimation/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fgbxi"]
_data = {
"RESET": SubResource("Animation_65a1b"),
"SleepAnimation": SubResource("Animation_isok7")
}

[node name="CampScene" type="Node2D"]
script = ExtResource("1_5txfa")

[node name="CampUI" type="CanvasLayer" parent="."]

[node name="MC" type="MarginContainer" parent="CampUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48

[node name="Title" type="Label" parent="CampUI/MC"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "CAMP(REST SITE?)"
label_settings = SubResource("LabelSettings_x171v")
horizontal_alignment = 1

[node name="SeasonInf" type="Label" parent="CampUI/MC"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Season"
label_settings = SubResource("LabelSettings_x171v")
horizontal_alignment = 1

[node name="InfoText" type="Label" parent="CampUI/MC"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 8
text = "Welcome to the rest site, why don't you take a nap? 
just remember that if you do it, you will heal your  wounds, however the season will also change to the next one!"
label_settings = SubResource("LabelSettings_2tmd6")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="CampUI/MC"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 48

[node name="SleepBT" type="Button" parent="CampUI/MC/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Sleep(Changes Season)
"

[node name="GbBT" type="Button" parent="CampUI/MC/HBoxContainer"]
layout_mode = 2
text = "Go Back"

[node name="Transition" type="AnimationPlayer" parent="CampUI"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_fhb1c")
}

[node name="ColorRect" type="ColorRect" parent="CampUI/Transition"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="SleepAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../CampUI")
libraries = {
"": SubResource("AnimationLibrary_fgbxi")
}

[node name="ColorRect" type="ColorRect" parent="SleepAnimation"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="CampUI/MC/HBoxContainer/SleepBT" to="." method="_on_sleep_bt_pressed"]
[connection signal="pressed" from="CampUI/MC/HBoxContainer/GbBT" to="." method="_on_gb_bt_pressed"]
[connection signal="animation_finished" from="SleepAnimation" to="." method="_on_sleep_animation_animation_finished"]
